--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -103,16 +103,16 @@
                 <div class="dashboard-right" *ngIf="ShowTabName=='Address'">
                     <div class="dashboard">
                         <div class="page-title">
-                            <h2>Billing Address</h2>
+                            <h2>Delivery Address</h2>
                         </div>
 
                         <div class="box-account box-info">
                             <div>
                                 <div class="box">
                                     <div class="box-title">
-                                        <h3>Billing Address</h3>
+                                        <h3>Delivery Address</h3>
                                         <a href="javascript:void(0)" (click)="NewBillingAddress(templateBillingAddress)"><i
-                                                class="fa fa-plus"></i> &nbsp; Add New Billing Address</a>
+                                                class="fa fa-plus"></i> &nbsp; Add New Delivery Address</a>
                                     </div>
                                     <div *ngFor="let lstBilling of lstBillingAddress">
                                         <!-- <h6>Default Billing Address</h6> -->
@@ -481,7 +481,7 @@
                         <div class="row">
                             <div class="col-lg-12 col-sm-12 col-xs-12">
                                 <div class="checkout-title">
-                                    <h3>Billing Details</h3>
+                                    <h3>Delivery Details</h3>
                                 </div>
                                 <div class="row check-out">
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
