--- a/src/app/pages/account/dashboard/dashboard.component.html
+++ b/src/app/pages/account/dashboard/dashboard.component.html
@@ -120,11 +120,11 @@
                                             <div class="row">
                                                 <div class="col-md-11">
 
-                                                    <h4><b>{{lstBilling.fName}} {{lstBilling.lName}}</b></h4>
-                                                    <div><b>{{lstBilling.phone}} &nbsp;&nbsp;&nbsp;
-                                                            {{lstBilling.emailId}}</b></div>
-                                                    <div>{{lstBilling.companyName}}</div>
-                                                    <div>
+                                                    <h4><b>Full Name : {{lstBilling.fName}} {{lstBilling.lName}}</b></h4>
+                                                    <!-- <div><b>{{lstBilling.phone}} &nbsp;&nbsp;&nbsp;
+                                                            {{lstBilling.emailId}}</b></div> -->
+                                                    <div><b>Company Name : </b>{{lstBilling.companyName}}</div>
+                                                    <div><b>Address : </b> 
                                                         {{lstBilling.address}}, {{lstBilling.city}}
                                                         {{lstBilling.state}}, {{lstBilling.zipCode}},
                                                         {{lstBilling.country}}
@@ -472,7 +472,7 @@
 <ng-template class="theme-modal" #templateBillingAddress let-modal>
     <div class="modal-content quick-view-modal">
         <div class="modal-body">
-            <button type="button" class="close" (click)="modal.dismiss('Cross click')">
+            <button type="button" class="close" style="background-color: white;" (click)="modal.dismiss('Cross click')">
                 <span aria-hidden="true">&times;</span>
             </button>
             <div class="checkout-page">
@@ -505,7 +505,7 @@
                                         </div>
                                     </div> -->
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Company Name <span style="color:red">*</span></div>
+                                        <div class="field-label">Company Name </div>
                                         <input type="text" name="companyName" [formControl]="checkoutForm.controls['companyName']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.companyName.touched || Submitted) && checkoutForm.controls.companyName.errors?.required" class="text text-danger">
                                             Company Name is required.
@@ -514,7 +514,7 @@
                                             Company Name must be an alphabates.
                                         </div>
                                     </div>
-                                    <div class="form-group col-md-4 col-sm-4 col-xs-4">
+                                    <!-- <div class="form-group col-md-4 col-sm-4 col-xs-4">
                                         <div class="field-label">Phone <span style="color:red">*</span></div>
                                         <input type="text" name="phone" maxlength="10" [formControl]="checkoutForm.controls['phone']" value="" placeholder="" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.phone.touched || Submitted) && checkoutForm.controls.phone.errors?.required" class="text text-danger">
@@ -533,20 +533,20 @@
                                         <div *ngIf="(checkoutForm.controls.emailId.touched || Submitted) && checkoutForm.controls.emailId.errors?.emailId" class="text text-danger">
                                             Invalid Email Address
                                         </div>
-                                    </div>
+                                    </div> -->
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
                                         <div class="field-label">Country <span style="color:red">*</span></div>
                                         <select name="country" [formControl]="checkoutForm.controls['country']">
-                                            <option value="" selected>Select Country</option>
+                                            <!-- <option value="" selected>Select Country</option> -->
                                             <option value="India">India</option>
-                                            <option value="USA">USA</option>
-                                            <option value="Australia">Australia</option>
+                                            <!-- <option value="USA">USA</option>
+                                            <option value="Australia">Australia</option> -->
                                         </select>
                                         <div *ngIf="(checkoutForm.controls.country.touched || Submitted) && checkoutForm.controls.country.errors?.required" class="text text-danger">
                                             Country is required
                                         </div>
                                     </div>
-                                    <div class="form-group col-md-4 col-sm-4 col-xs-4">
+                                    <div class="form-group col-md-8 col-sm-8 col-xs-8">
                                         <div class="field-label">Address <span style="color:red">*</span></div>
                                         <input type="text" name="address" [formControl]="checkoutForm.controls['address']" value="" placeholder="Address" autocomplete="off">
                                         <div *ngIf="(checkoutForm.controls.address.touched || Submitted) && checkoutForm.controls.address.errors?.required" class="text text-danger">
@@ -614,10 +614,10 @@
                                     </div>
 
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
-                                        <div class="field-label">Postal Code <span style="color:red">*</span></div>
-                                        <input type="text" name="zipCode" [formControl]="checkoutForm.controls['zipCode']" value="" placeholder="" autocomplete="off">
+                                        <div class="field-label">Pin Code <span style="color:red">*</span></div>
+                                        <input type="text" name="zipCode" [formControl]="checkoutForm.controls['zipCode']" value="" placeholder="" autocomplete="off" maxlength="6" [mask]="PinCodeMask" [dropSpecialCharacters]="false" (focus)="addPinCodeMask($event);">
                                         <div *ngIf="(checkoutForm.controls.zipCode.touched || Submitted) && checkoutForm.controls.zipCode.errors?.required" class="text text-danger">
-                                            zipCode is required
+                                            Pin Code is required
                                         </div>
                                     </div>
                                     <div class="form-group col-md-4 col-sm-4 col-xs-4">
@@ -639,7 +639,7 @@
 <ng-template class="theme-modal" #templateDeleteBillingAddress let-modal>
     <div class="modal-content quick-view-modal">
         <div class="modal-body">
-            <button type="button" class="close" (click)="modal.dismiss('Cross click')">
+            <button type="button" class="close" style="background-color: white;" (click)="modal.dismiss('Cross click')">
                 <span aria-hidden="true">&times;</span>
             </button>
             <div class="checkout-page">
@@ -650,7 +650,7 @@
                                 <div class="checkout-title">
                                     <h3>Do you want to delete this address?</h3>
                                 </div>
-                                <div class="row check-out">
+                                <div class="row">
 
                                     <div class="col-lg-6 col-sm-6 col-xs-6 text-left">
                                         <button type="submit" class="btn-solid btn" (click)="DelBillingAddress()">
@@ -675,7 +675,7 @@
 <ng-template class="theme-modal" #templateChangePwd let-modal>
     <div class="modal-content quick-view-modal">
         <div class="modal-body">
-            <button type="button" class="close" (click)="modal.dismiss('Cross click')">
+            <button type="button" class="close" style="background-color: white;" (click)="modal.dismiss('Cross click')">
                 <span aria-hidden="true">&times;</span>
             </button>
             <div class="checkout-page">
