--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -3,8 +3,8 @@
     <div class="container">
         <div class="col-sm-12 empty-cart-cls text-center" *ngIf="IsEmptyCart==true">
             <img src="assets/images/icon-empty-cart.png" class="img-fluid mb-4">
-            <h3><strong>Your Cart is Empty</strong></h3>
-            <h4>Add something to make me happy :)</h4>
+            <h3><strong>Your Cart is Empty!</strong></h3>
+            <h4>Add items to it now.</h4>
             <div class="text-center">
                 <a [routerLink]="['/shop/collection/left/sidebar']" class="btn btn-solid">continue shopping</a>
             </div>
