--- a/src/app/shop/checkout/checkout.component.html
+++ b/src/app/shop/checkout/checkout.component.html
@@ -522,7 +522,7 @@
                         </div> -->
                         <div class="mt-3 secure-msg">
                             <img src="assets/images/icon/shield-fill.svg" alt="Secure">
-                            <div>Safe and Secure Payments. Easy returns. 100% Authentic products.</div>
+                            <div>Safe and Secure Payments. Authentic products. Easy buying options.</div>
                         </div>
                     </div>
 
