--- a/src/app/shop/cart/cart.component.html
+++ b/src/app/shop/cart/cart.component.html
@@ -101,7 +101,7 @@
                                                 {{ product.perDiscount/product.totalPieces | number:'1.2-2' }}%</h5>
                                         </div>
 
-                                        <a href="javascript:void(0)" (click)="removeItem(product)" class="icon">
+                                        <a href="javascript:void(0)" (click)="deleteConfirmation(templateDeleteItem,product)" class="icon">
                                             <i class="ti-trash text-red" style="font-size:1.5rem;"></i>
                                         </a>
                                     </div>
@@ -232,4 +232,40 @@
         <a class="close" (click)="close()"><img src="assets/images/icon/close.svg" alt="Close"></a>
     </div>
 
+</ng-template>
+
+<ng-template class="theme-modal" #templateDeleteItem let-modal>
+    <div class="modal-content quick-view-modal">
+        <div class="modal-body">
+            <button type="button" class="close" style="background-color: white;" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+            <div class="checkout-page">
+                <div class="checkout-form">
+                    <form>
+                        <div class="row">
+                            <div class="col-lg-12 col-sm-12 col-xs-12">
+                                <div class="checkout-title">
+                                    <h3>Do you want to delete this item?</h3>
+                                </div>
+                                <div class="row">
+
+                                    <div class="col-lg-6 col-sm-6 col-xs-6 text-left">
+                                        <button type="submit" class="btn-solid btn" (click)="removeItem()">
+                                            Yes
+                                        </button>
+                                    </div>
+                                    <div class="col-lg-6 col-sm-6 col-xs-6 text-right">
+                                        <button type="button" class="btn-solid btn" (click)="modal.dismiss('Cross click')">
+                                            No
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 </ng-template>
